checking in before I start messing things p

--- a/happy.html
+++ b/happy.html
@@ -19,20 +19,9 @@
 			<div class="twitter_button"></div>
 		</div>
 		<div class="container">
-			<!-- <span class="left_gutter gutter"><a class="page_prev"><img src="images/pkisses_button-arrow_left.png"></img></a></span>
-			<span class="right_gutter gutter"><a class="page_next"><img src="images/pkisses_button-arrow_right.png"></img></a></span> -->
+			<span class="right_gutter gutter"><a href="pictures.html"><img src="images/pkisses_button-arrow_right.png"></img></a></span>
 			<div class="page_scroll">
 				<div id="pages">
-					<div class="page">
-						<div>
-							<img src="images/pkisses_logo.png" />
-						</div>
-						<div id="welcome_text">
-							This website contains no explicit adult material.<br />
-							You don't need to be over 21 to view this site.
-						</div>
-						<a href="happy.html"><div class="enter_button"></div></a>
-					</div>
 					<div class="page">
 						<div>
 							<img src="images/pkisses_logo.png" />
