--- a/pictures.html
+++ b/pictures.html
@@ -12,43 +12,23 @@
 	<link rel="stylesheet" type="text/css" href="stylesheets/styles.css" />
 	<script src="javascripts/application.js"></script>
 </head>
-<body>
+<body class="pictures">
 	<div class="content">
 		<div class="header_controls">
 			<div class="fb_button"></div>
 			<div class="twitter_button"></div>
 		</div>
 		<div class="container">
-			<!-- <span class="left_gutter gutter"><a class="page_prev"><img src="images/pkisses_button-arrow_left.png"></img></a></span>
-			<span class="right_gutter gutter"><a class="page_next"><img src="images/pkisses_button-arrow_right.png"></img></a></span> -->
+			<span class="left_gutter gutter"><a class="page_prev"><img src="images/pkisses_button-arrow_left.png"></img></a></span>
+			<span class="right_gutter gutter"><a class="page_next"><img src="images/pkisses_button-arrow_right.png"></img></a></span>
 			<div class="page_scroll">
 				<div id="pages">
-					<div class="page">
-						<div>
-							<img src="images/pkisses_logo.png" />
-						</div>
-						<div id="welcome_text">
-							This website contains no explicit adult material.<br />
-							You don't need to be over 21 to view this site.
-						</div>
-						<a href="happy.html"><div class="enter_button"></div></a>
+					<div class="pic">
+						<img src="images/kiss1.jpg" />
 					</div>
-					<div class="page">
-						<div>
-							<img src="images/pkisses_logo.png" />
-						</div>
-						<div id="text_content">
-							our way to say
-						</div>
-						<div id="card">
-							<img src="images/pkisses_valentines-card.png" />					
-						</div>
-					</div>
-					<div class="page picture">
-					</di>
 				</div>
 			</div>
 		</div>
 	</div>
 </body>
-</html>
+</html> 
