--- a/pictures.html
+++ b/pictures.html
@@ -26,6 +26,10 @@
 					<div class="pic">
 						<img src="images/kiss1.jpg" />
 					</div>
+					<div class="pic">
+						<img src="images/kiss1.jpg" />
+					</div>
+
 				</div>
 			</div>
 		</div>
