--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <body>
 	<div class="content">
 		<div class="header_controls">
-			<div class="fb_button"></div>
+			<script>function fbs_click() {u=location.href;t=document.title;window.open('http://www.facebook.com/sharer.php?u='+encodeURIComponent(u)+'&t='+encodeURIComponent(t),'sharer','toolbar=0,status=0,width=626,height=436');return false;}</script><a rel="nofollow" href="http://www.facebook.com/share.php?u=<;url>" onclick="return fbs_click()" target="_blank"><div class="fb_button"></div></a>
+			
+			
 			<div class="twitter_button"></div>
 		</div>
 		<div class="container">
