--- a/happy.html
+++ b/happy.html
@@ -15,11 +15,11 @@
 <body>
   <div class="content">
     <div class="header_controls">
-      <script>function fbs_click() {u=location.href;t=document.title;window.open('http://www.facebook.com/sharer.php?u=http%3A%2F%2Fwww.neverendingpornokisses.com&t=Neverending+Porno+Kisses','sharer','toolbar=0,status=0,width=626,height=436');return false;}</script><a rel="nofollow" href="http://www.facebook.com/share.php?u=<;url>" onclick="return fbs_click()" target="_blank"><div class="fb_button"></div></a>
-      <a href="https://twitter.com/share?url=http%3A%2F%2Fwww.neverendingpornokisses.com" target="_blank"><div class="twitter_button"></div></a>
+      <a href="https://twitter.com/share?url=http%3A%2F%2Fwww.endlesspornokisses.com" target="_blank"><div class="twitter_button"></div></a>
+      <script>function fbs_click() {u=location.href;t=document.title;window.open('http://www.facebook.com/sharer.php?u=http%3A%2F%2Fwww.endlesspornokisses.com&t=Neverending+Porno+Kisses','sharer','toolbar=0,status=0,width=626,height=436');return false;}</script><a rel="nofollow" href="http://www.facebook.com/share.php?u=<;url>" onclick="return fbs_click()" target="_blank"><div class="fb_button"></div></a>
     </div>
+    <span class="right_gutter gutter"><a href="pictures.html"><div class="arrow_right"></div></a></span>    
     <div class="container">
-      <span class="right_gutter gutter"><a href="pictures.html"><div class="arrow_right"></div></a></span>    
       <div class="page_scroll">
         <div id="pages">
           <div class="page">
