--- a/send.html
+++ b/send.html
@@ -18,29 +18,18 @@
       <a href="https://twitter.com/share?url=http%3A%2F%2Fwww.endlesspornokisses.com" target="_blank"><div class="twitter_button"></div></a>
       <script>function fbs_click() {u=location.href;t=document.title;window.open('http://www.facebook.com/sharer.php?u=http%3A%2F%2Fwww.endlesspornokisses.com&t=Neverending+Porno+Kisses','sharer','toolbar=0,status=0,width=626,height=436');return false;}</script><a rel="nofollow" href="http://www.facebook.com/share.php?u=<;url>" onclick="return fbs_click()" target="_blank"><div class="fb_button"></div></a>
     </div>
+    <span class="left_gutter gutter"><a href="pictures.html"><div class="arrow_left"></div></a></span>
     <div class="container">
       <div class="page_scroll">
         <div id="pages">
           <div class="page">
-            <div>
-              <img src="images/pkisses_logo.png" />
+            <div style="height: 200px">
             </div>
             <div id="text_content">
-              This website contains no explicit adult material.<br />
-              You don't need to be over 21 to view this site.
+              Help us ensure Endless Porno Kisses never ends.<br />
+			  Spread the love, send us your GIFs.
             </div>
-            <a href="happy.html"><div class="enter_button"></div></a>
-          </div>
-          <div class="page">
-            <div>
-              <img src="images/pkisses_logo.png" />
-            </div>
-            <div id="text_content">
-              our way to say
-            </div>
-            <div id="card">
-              <img src="images/pkisses_valentines-card.png" />					
-            </div>
+            <a href="mailto:someemail@some.com"><div class="send_button"></div></a>
           </div>
         </div>
       </div>
