--- a/send.html
+++ b/send.html
@@ -16,7 +16,7 @@
   <div class="content">
     <div class="header_controls">
       <a href="https://twitter.com/share?url=http%3A%2F%2Fwww.endlesspornokisses.com" target="_blank"><div class="twitter_button"></div></a>
-      <script>function fbs_click() {u=location.href;t=document.title;window.open('http://www.facebook.com/sharer.php?u=http%3A%2F%2Fwww.endlesspornokisses.com&t=Neverending+Porno+Kisses','sharer','toolbar=0,status=0,width=626,height=436');return false;}</script><a rel="nofollow" href="http://www.facebook.com/share.php?u=<;url>" onclick="return fbs_click()" target="_blank"><div class="fb_button"></div></a>
+      <script>function fbs_click() {u=location.href;t=document.title;window.open('http://www.facebook.com/sharer.php?u=http%3A%2F%2Fwww.endlesspornokisses.com&t=Endless+Porno+Kisses','sharer','toolbar=0,status=0,width=626,height=436');return false;}</script><a rel="nofollow" href="http://www.facebook.com/share.php?u=<;url>" onclick="return fbs_click()" target="_blank"><div class="fb_button"></div></a>
     </div>
     <span class="left_gutter gutter"><a href="pictures.html"><div class="arrow_left"></div></a></span>
     <div class="container">
